# ElbowExo

./: .gitignore  BevægelseHorisontalt1.npz  BevægelseHorisontalt2.npz  BevægelseVertikaltExFlex1.npz  FlexEx.npz  Htest.npz  README.md  app.py  billede.py  collectData.py  commands.txt  commtest.py  displayData.py  dockerfile  emg_signal.py  entrypoint.sh  environment.yml  filter copy.py  filter.py  filter_test.py  freqplot.py  get_position.py  get_velocity.py  loadData.py  loadcellPlot.py  main.py  myMain.py  pixi.toml  precisionPlot.py  printData.py  run.bat  run.sh  shimmer.py  shimmer_data.npz  shimmer_data1.npz  shimmer_data2.npz  shimmer_data4.npz  shimmer_data5.npz  shimmer_data6.npz  shimmer_dataHolderNogetTungt.npz  (+3 more)
Filter/: collectData.py  filter.py  liveApp.py  printData.py  printFilteredData.py
FriLeg/: ShimmerESPConnect.py
RawMeasurements/: BevægelseHorisontalt.npz  BevægelseHorisontaltFlexEx.npz  BevægelseHorisontaltFlexEx1.npz  BevægelseVertikaltExFlex.npz  BevægelseVertikaltFlexEx.npz  BevægelseVertikaltFlexEx1.npz  Htest.npz  HurtigHorisontal.npz  HurtigVertikal.npz  ingenAktivitet.npz  ingenAktivitet1.npz  ingenAktivitetDingler.npz  ingenAktivitetDingler1.npz
Shimmer3/: ControlEMG.py  FilterAndDisplay.ipynb  LiveApp.py  LiveFilteredApp.py  RecieveApp.py  SendApp.py  ShimmerESPConnect.py  connectShimmer.py  connect_n_display.py  dataHandling.py  displayShimmerData.py  filter.py  filtering.ipynb  myMain.py  recordData.py  run.py  shimmer.py  test.py  trained_model.pkl  trained_model_RF.pkl
Wroom/: platformio.ini
app_dependency/: design.py  mainwindow.ui
data/: 1728639588.9668145-loadcell.pkl  1728989763.7558188-shimmer.pkl  1728989763.7887301-loadcell.pkl  1728990511.899259-loadcell.pkl  1728991498.7471807-shimmer.pkl  1728991498.8272517-loadcell.pkl  1728991815.872494-shimmer.pkl  1728992109.1977985-shimmer.pkl  1728992109.2469435-loadcell.pkl  1728992412.1438165-shimmer.pkl  1728992412.2232115-loadcell.pkl  1728992651.447822-shimmer.pkl  1728992651.5021315-loadcell.pkl  1731066304.431983-shimmer.pkl  1731066992.9297063-shimmer.pkl  (+2 more)
epos/: epos.py  (+1 more)
filter/: Cargo.toml  collectData.py  filter copy.py  filter.py  loadData.py  printData.py  printFilteredData.py  pyproject.toml
filter/helper-files/: printData.py
filter/src/: lib.rs
filter/tests/: freqHist.py  sosfilter.py  test.py
workspace/install/emg_sensor/share/emg_sensor/: package.dsv  package.sh  package.xml  package.zsh
workspace/install/emg_sensor/share/emg_sensor/cmake/: emg_sensorConfig.cmake
workspace/src/emg_listener/: CMakeLists.txt  package.xml
workspace/src/emg_listener/src/: listener.cpp
workspace/src/emg_sensor/: CMakeLists.txt
workspace/src/emg_sensor/src/: sensor.cpp
(+90 files in other folders)
