[package]
name = "filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "filter"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.16"
numpy = "0.22.0"
pyo3 = "0.22.0"

[profile.release]
codegen-units = 1
lto = "thin"