<?xml version="1.0"?>
<package format="2">
  <name>emg_sensor</name>
  <version>0.0.0</version>
  <description>The emg_sensor package</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>